Fix handling of deprecated param in API
